[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Entities/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/hp.png" type="Texture" id=2]
[ext_resource path="res://Assets/exp.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Area/World.gd" type="Script" id=4]
[ext_resource path="res://Assets/tileset.png" type="Texture" id=5]
[ext_resource path="res://Assets/Items/wood.png" type="Texture" id=6]
[ext_resource path="res://Assets/Items/steel.png" type="Texture" id=7]

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 8, 0, 8, 8, 0, 8 )

[sub_resource type="TileSet" id=1]
0/name = "Grass"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 24, 8 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 8, 8 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [ Vector3( 2, 0, 8 ) ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "GrassVoid"
1/texture = ExtResource( 5 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 32, 0, 8, 8 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[node name="World" type="Node2D"]
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Objects" type="YSort" parent="."]
scale = Vector2( 4, 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Player" parent="Objects" instance=ExtResource( 1 )]
position = Vector2( 80, 44.75 )

[node name="Overworld" type="TileMap" parent="Objects"]
z_index = -1
tile_set = SubResource( 1 )
cell_size = Vector2( 8, 8 )
cell_tile_origin = 1
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="HUD" type="CanvasLayer" parent="."]

[node name="MaxHP" type="Sprite" parent="HUD"]
modulate = Color( 1, 1.5, 1, 1 )
position = Vector2( 552, 304 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
hframes = 21
vframes = 2
__meta__ = {
"_edit_group_": true
}

[node name="HP" type="Sprite" parent="HUD/MaxHP"]
texture = ExtResource( 2 )
hframes = 21
vframes = 2
frame = 25

[node name="MaxXP" type="Sprite" parent="HUD"]
modulate = Color( 1, 1, 1.5, 1 )
position = Vector2( 452, 323 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )
hframes = 15
vframes = 2
frame = 4
__meta__ = {
"_edit_group_": true
}

[node name="XP" type="Sprite" parent="HUD/MaxXP"]
texture = ExtResource( 3 )
hframes = 15
vframes = 2
frame = 16

[node name="Control" type="Control" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="HUD/Control"]
margin_left = 16.0
margin_top = 256.0
margin_right = 48.0
margin_bottom = 288.0
texture = ExtResource( 6 )
expand = true

[node name="Label" type="Label" parent="HUD/Control/TextureRect"]
margin_left = 32.0
margin_right = 64.0
margin_bottom = 32.0
text = "0"
align = 1
valign = 1

[node name="TextureRect2" type="TextureRect" parent="HUD/Control"]
margin_left = 15.0
margin_top = 288.0
margin_right = 47.0
margin_bottom = 320.0
texture = ExtResource( 7 )
expand = true

[node name="Label" type="Label" parent="HUD/Control/TextureRect2"]
margin_left = 32.0
margin_right = 64.0
margin_bottom = 32.0
text = "0"
align = 1
valign = 1

[node name="Label" type="Label" parent="HUD/Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -80.0
margin_bottom = 41.0
text = "PROTO"

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 2.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
